Added Enderite with placeholder textures

--- a/src/main/resources/assets/beyondtheend/lang/en_us.json
+++ b/src/main/resources/assets/beyondtheend/lang/en_us.json
@@ -1,24 +1,36 @@
 {
   "block.beyondtheend.beyond_willow_slab": "BeyondWillow Slab",
-  "block.beyondtheend.sporestem_fence_gate": "Sporestem Fence Gate",
-  "block.beyondtheend.sporestem_fence": "Sporestem Fence",
+  "item.beyondtheend.enderite_armor_chestplate": "Enderite Chestplate",
+  "item.beyondtheend.enderite": "Enderite",
+  "item.beyondtheend.enderite_armor_helmet": "Enderite Helmet",
+  "item.beyondtheend.enderite_armor_leggings": "Enderite Leggings",
   "block.beyondtheend.beyond_willow_fence_gate": "BeyondWillow Fence Gate",
+  "block.beyondtheend.enderite_ore": "Enderite Ore",
+  "item.beyondtheend.enderite_axe": "Enderite Axe",
+  "item.beyondtheend.tab_icon": "Tab Icon",
+  "block.beyondtheend.sporestem_planks": "Sporestem Planks",
+  "block.beyondtheend.beyond_willow_stairs": "BeyondWillow Stairs",
+  "item.beyondtheend.enderite_sword": "Enderite Sword",
+  "block.beyondtheend.enderite_block": "Block of Enderite",
+  "block.beyondtheend.sporestem_stairs": "Sporestem Stairs",
+  "block.beyondtheend.beyond_willow_leaves": "BeyondWillow Leaves",
+  "block.beyondtheend.sporestem_button": "Sporestem Button",
+  "item.beyondtheend.enderite_hoe": "Enderite Hoe",
+  "block.beyondtheend.sporestem_fence": "Sporestem Fence",
+  "block.beyondtheend.sporestem_fence_gate": "Sporestem Fence Gate",
+  "item.beyondtheend.enderite_pickaxe": "Enderite Pickaxe",
   "block.beyondtheend.beyond_willow_planks": "BeyondWillow Planks",
   "block.beyondtheend.beyond_willow_button": "BeyondWillow Button",
   "block.beyondtheend.sporestem_leaves": "Sporestem Leaves",
-  "block.beyondtheend.sporestem_wood": "Sporestem Wood",
   "block.beyondtheend.beyond_willow_fence": "BeyondWillow Fence",
-  "item.beyondtheend.tab_icon": "Tab Icon",
-  "block.beyondtheend.sporestem_planks": "Sporestem Planks",
+  "block.beyondtheend.sporestem_wood": "Sporestem Wood",
   "block.beyondtheend.beyond_willow_log": "BeyondWillow Log",
   "block.beyondtheend.beyond_willow_pressure_plate": "BeyondWillow Pressure Plate",
   "block.beyondtheend.beyond_willow_wood": "BeyondWillow Wood",
-  "block.beyondtheend.beyond_willow_stairs": "BeyondWillow Stairs",
   "block.beyondtheend.sporestem_pressure_plate": "Sporestem Pressure Plate",
   "item_group.beyondtheend.beyond_the_end": "Beyond the End",
+  "item.beyondtheend.enderite_shovel": "Enderite Shovel",
+  "item.beyondtheend.enderite_armor_boots": "Enderite Boots",
   "block.beyondtheend.sporestem_log": "Sporestem Log",
-  "block.beyondtheend.sporestem_stairs": "Sporestem Stairs",
-  "block.beyondtheend.sporestem_slab": "Sporestem Slab",
-  "block.beyondtheend.beyond_willow_leaves": "BeyondWillow Leaves",
-  "block.beyondtheend.sporestem_button": "Sporestem Button"
+  "block.beyondtheend.sporestem_slab": "Sporestem Slab"
 }
